# project

./: .gitignore  .replit  AI_MODELS_OVERVIEW.md  ALL_TAB_ERRORS_FIXED_REPORT.md  ANALYSIS_PERIOD_OPTIMIZATION_GUIDE.md  BACKTESTING_GUIDE.md  BUG_FIXES_SUMMARY.md  CHART_FIX_SUMMARY.md  COLLAPSIBLE_CONTROL_PANEL_SUMMARY.md  COLOR_CHANGES_SUMMARY.md  COMBINED_PREDICTION_SUMMARY.md  COMPLETE_FIX_REPORT.md  DEPLOYMENT_STATUS.md  DROPDOWN_CONFIDENCE_ENHANCEMENT_SUMMARY.md  DROPDOWN_IMPROVEMENTS.md  ENHANCEMENT_SUMMARY.md  FINAL_PROJECT_STATUS.md  FIXES_APPLIED.md  FIX_SUMMARY_REPORT.md  IMPLEMENTATION_SUMMARY.md  LATEST_FIXES_SUMMARY.md  META_AI_SYSTEM_COMPLETE.md  PROJECT_ERROR_FIXES_REPORT.md  PROJECT_STATUS_REPORT.md  README.md  TIMEFRAME_ANALYSIS_FIX.md  TROUBLESHOOTING_GUIDE.md  UI_IMPROVEMENTS_SUMMARY.md  UPDATE_SUMMARY.md  VIVA_PREPARATION_GUIDE.md  advanced_strategies.py  analytics_bug_fixes_report.py  analytics_final_verification.py  analytics_test_report.py  app.py  backtest_comprehensive.py  backtest_simple.py  comprehensive_system_report.py  demo_auto_discovery.py  deploy_guide.md  (+15 more)
.streamlit/: config.toml
config/: all_indian_stocks.json  settings.py
data/: notifications.json  stock_cache.json
models/: ensemble_model.py  gru_model.py  lstm_model.py  prophet_model.py  stacking_ensemble.py  transformer_model.py  xgboost_model.pkl  xgboost_model.py  xgboost_scaler.pkl
styles/: custom_css.py
utils/: advanced_analytics.py  auto_updater.py  background_service.py  data_fetcher.py  model_info.py  model_utils.py  news_sentiment.py  portfolio_tracker.py  (+3 more)
