[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "numpy<2.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.47.0",
    "keras>=3.10.0",
    "jax[cpu]>=0.5.0",
    "textblob>=0.19.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.65",
    "lightgbm>=4.3.0",
    "tensorflow>=2.18.0",
]
